feat: Update project name and branding
Refactors the project name and branding elements to reflect "Quality Home Portal Imobiliário". This includes updating:
- `package.json` name.
- `index.html` title.
- `metadata.json` name and description.
- Tailwind CSS color configuration to a new palette.
- Styles in `App.tsx` and `components/PropertyListings.tsx` to use the new color scheme.
- Footer text in `App.tsx` to include the new project name.
- Header and Hero components to align with new design and naming conventions.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quality-home-real-estate-portal",
+  "name": "quality-home-portal-imobiliário",
   "private": true,
   "version": "0.0.0",
   "type": "module",
