--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@google/genai": "latest",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
