refactor: Remove react-leaflet-draw dependency
The react-leaflet-draw library is no longer needed and has been removed from the project dependencies. The related import statements and usage within the MapDrawPage component have also been removed.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@google/genai": "latest",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-draw": "^0.20.4"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
