feat: Integrate Leaflet Draw for property zone selection
This commit introduces the Leaflet Draw plugin to allow users to draw polygons on the map to select properties within a specific zone.

Key changes include:
- Adding `leaflet`, `leaflet-draw` to dependencies.
- Importing Leaflet CSS and JS directly into `index.html` and removing CDN links.
- Refactoring `MapDrawPage` to initialize and manage the Leaflet Draw control.
- Adjusting CSS to reposition the draw toolbar to the bottom center of the map for better usability.
- Updating the application name in `package.json` and `metadata.json` to reflect the project's intended purpose.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quality-home-portal-imobiliário",
+  "name": "copy-of-quality-home-portal-imobiliário_copy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@google/genai": "latest",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "4.2.1",
+    "leaflet": "1.9.4",
+    "leaflet-draw": "1.0.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
