--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-quality-home-portal-imobiliário_copy",
+  "name": "quality-home-portal-imobiliário_v1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
