--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "latest",
     "react-leaflet": "4.2.1",
     "leaflet": "1.9.4",
-    "leaflet-draw": "1.0.4"
+    "leaflet-draw": "1.0.4",
+    "@supabase/supabase-js": "2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
