chore: Update project name and add animations
Updates the project name in `package.json` and `metadata.json` to `qualityhome_modelolayout_1`.
Adds CSS animations for slide-up and logo splash effects to `index.html`.
Configures Vite to use port 3000 and host 0.0.0.0 in `vite.config.ts`.
Updates the AI Studio app link in `README.md`.
Introduces `SplashScreen` component and refactors `App.tsx` to handle initial loading states and navigation types.
Removes unused imports and components in `Header.tsx` and `Hero.tsx`.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quality-home-portal-imobiliário_v1",
+  "name": "qualityhome_modelolayout_1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
