feat: Update project configuration and remove unused styles
This commit updates the project's metadata and package name to reflect the current application name: "Quality Home Portal Imobiliário_v1_FINAL". It also removes redundant CSS animations from the index.html file, as they are no longer in use. Additionally, minor adjustments are made to imports and component structure in App.tsx and Header.tsx to improve clarity and maintainability. The README.md file is also updated with the correct AI Studio app link.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qualityhome_modelolayout_1",
+  "name": "quality-home-portal-imobiliário_v1_final",
   "private": true,
   "version": "0.0.0",
   "type": "module",
