feat: Update project name and add animations
Refactor project metadata and introduce new CSS animations for page transitions and splash screen. This includes updating the `package.json` and `metadata.json` with the new project name "QualityHome_ModeloLayout_2". Additionally, new animation keyframes and classes have been added to `index.html` for slide-in/out effects and a logo splash animation. The `vite.config.ts` was simplified by removing unnecessary server configurations. README has also been updated with the new project name. The `App.tsx` component structure was updated to accommodate new page states and routing logic, and some components like Header and Hero were refactored to support new navigation and search functionalities.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quality-home-portal-imobiliário_v1_final",
+  "name": "qualityhome_modelolayout_2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
