refactor: Update project name and branding
Updates the project name in package.json and metadata.json to `quallity-home-portal-imobiliário_v1_enxuta`.
Swaps out old favicon and apple touch icon URLs for a new unified logo URL.
Removes unused components and types related to chat and messaging features, and simplifies the Header component by removing user-specific navigation items and icons.
Introduces a new `card-fade-in` animation for property cards.
Updates the README.md with a new AI Studio link.
Adds an `ExplorePage` component and adjusts navigation callbacks in `Header.tsx` to reflect new navigation options.
Cleans up unused imports and types across various files.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-quallity-home-portal-imobiliário_v1_final_maps",
+  "name": "quallity-home-portal-imobiliário_v1_enxuta",
   "private": true,
   "version": "0.0.0",
   "type": "module",
