--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quallity-home-portal-imobiliário_v1_enxuta",
+  "name": "quallity-home-portal-imobiliário_v1_enxuta-18/10/2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
