--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@google/genai": "latest",
     "@react-google-maps/api": "2.19.2",
-    "@supabase/supabase-js": "2"
+    "@supabase/supabase-js": "2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
