--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@google/genai": "latest",
     "@react-google-maps/api": "2.19.2",
     "@supabase/supabase-js": "2",
+    "@types/recharts": "^1.8.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^3.3.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
