--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-google-maps/api": "2.19.2",
     "@supabase/supabase-js": "2",
     "@types/recharts": "^1.8.29",
+    "playwright": "^1.56.1",
+    "puppeteer": "^24.26.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^3.3.0",
