Tornar endereço opcional nos formulários (Admin e multi-etapas). Adicionar script scripts/syncMedia.js para sincronizar mídia dos dois últimos anúncios, movendo arquivos de quallity-home para <imovel_id>/ e atualizando midias_imovel e imoveis.images/videos. Pequenos ajustes de validação e preview.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,18 +11,33 @@
     ],
     "skipLibCheck": true,
     "types": [
-      "node"
+      "node",
+      "vite/client",
+      "google.maps"
     ],
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
     "allowJs": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@components": [
+        "./components/index.ts"
+      ],
+      "@components/*": [
+        "./components/*"
+      ],
+      "@pages": [
+        "./pages/index.ts"
+      ],
+      "@pages/*": [
+        "./pages/*"
       ]
     },
-    "allowImportingTsExtensions": true
+    "noEmit": true
   }
 }
