--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "latest",
+    "@google/generative-ai": "^0.24.1",
     "@react-google-maps/api": "2.19.2",
     "@supabase/supabase-js": "2",
     "@types/recharts": "^1.8.29",
